--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,15 @@
 
 header{
 	width: 100%;
-	height: 60px;
+	height: 80px;
 	display: flex;
 	align-items: center; 
 	background: linear-gradient(#ff469f,#ff6062);
 
+}
+header .img,
+header .navigation{
+	display: inline-block;
 }
 
 .logo{
@@ -28,10 +32,10 @@ header{
 	margin: 30px 0;
 }
 .logo img {
-	height: 50px;
-	width: 60px;
-	margin-bottom: 30px;
-	margin-left: 30px;
+	height: auto;
+	width: 180px;
+	margin-top: 0px;
+	margin-left: 100px;
 }
 .menu-icon{
 	width: 25px;
@@ -42,7 +46,9 @@ header{
 	flex: 1;
 	text-align: right;
 }
-
+.navigation ul{
+	padding-right: 8%;
+}
 .navigation ul li{
 	list-style: none;
 	display: inline-block;
@@ -55,10 +61,10 @@ header{
     font-weight: bold;	
 }
 .navigation ul li a:hover{
-	color: #ff5ea2;
+	color: white;
 }
 main{
-	padding-left: 20%;
+	padding-left: 15%;
 	padding-right: 8%;
 }
 .row{
@@ -132,6 +138,8 @@ button:hover{
 
 .col-2 .control{
 	width: 90%;
+	height: 60%;
+	padding-top: 40px;
 	
 }
 
